--- a/stylesheet.css
+++ b/stylesheet.css
@@ -67,7 +67,7 @@ p {
 
 table {
 	border: #000000 1px solid;
-	background-color: #acd1b2;
+	background-color: green;
 	float: right;
 	margin-right: 10px;
 	border-bottom-right-radius: 15px;
